--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="js\validForm.js"></script>
     <script src="js\sendData.js"></script>
     <script src="js\currencySelector.js"></script>
+
     <header class="header">
         <h1 class="header__logo">OXYGENShop</h1>
         <button class="header__button__hamburger" onclick=hamburgerMenuDisplay()><img src="resources\svg\Menu.svg"
@@ -202,6 +203,23 @@
             </div>
         </div>
     </section>
+    <section>
+        <div id="slider" class="slider">
+            <div class="slider__images__container">
+                <img src="resources/img/iso-republic-buds-under-arching-branch.jpg" width="600" height="400">
+                <img src="resources/img/iso-republic-colorful-perched-birds.jpg" width="600" height="400">
+                <img src="resources/img/iso-republic-morning-dove-bird.jpg" width="600" height="400">
+                <img src="resources/img/iso-republic-water_droplets_flower.jpg" width="600" height="400">
+            </div>
+            <div class="slider__butons">
+                <button class="slider__butons__prev">&#10094;</button>
+                <button class="slider__butons__next">&#10095;</button>
+            </div>
+            <div class="slider__dots">
+
+            </div>
+        </div>
+    </section>
     <section class="section__contact" id="section_contact">
         <div class="section__contact__div">
             <h2>Any questions?</h2>
@@ -257,7 +275,7 @@
             <img src="resources\img\Twitter.png" alt="Twitter Icon">
         </div>
     </footer>
-
+    <script src="js\slider.js"></script>
 </body>
 
 </html>
