feat: get year automatically to footer

--- a/index.html
+++ b/index.html
@@ -291,13 +291,14 @@
     <footer>
         <div class="footer-text">
             <h2>OXYGEN Shop</h2>
-            <p>© 2025 OXYGEN, All Rights Reserved</p>
+            <p>© <span id="footer-text-year"></span> OXYGEN, All Rights Reserved</p>
             <img src="resources\img\Facebook.png" alt="Facebook Icon">
             <img src="resources\img\Twitter.png" alt="Twitter Icon">
         </div>
     </footer>
     <script src="js\slider.js"></script>
     <script src="js\newsletter.js"></script>
+    <script src="js\footerYear.js"></script>
 </body>
 
 </html>
